fix overflow issue on landing page

--- a/css/header-footer-commonpatterns.css
+++ b/css/header-footer-commonpatterns.css
@@ -1,8 +1,7 @@
 .html, body {
   margin: 0;
   height: 100%;
-  width: 100vw;
-  max-width: 100vw;
+  width: 100%;
   font-family: 'Nunito', sans-serif;
 }
 
